--- a/FabianSchuh_HomeAssignment_ProgrammingForPsychologists.ipynb
+++ b/FabianSchuh_HomeAssignment_ProgrammingForPsychologists.ipynb
@@ -15,6 +15,8 @@
     "\n",
     "Student Name:                   _Fabian Schuh_\n",
     "\n",
+    "Student Number:                 _2850418_\n",
+    "\n",
     "Notebook Completion Date:       _20.11.2024_"
    ]
   },
