Added suggestion for loading data, corrected typos, and changed the label of the histogram

--- a/JupiterNotebook_FabianSchuh_HomeAssignment_ProgrammingForPsychologists.ipynb
+++ b/JupiterNotebook_FabianSchuh_HomeAssignment_ProgrammingForPsychologists.ipynb
@@ -100,11 +100,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A quicker alternative would be using \"glob\" to fetch the files by their names and extensions:\n",
+    "\n",
+    "import glob\n",
+    "from nilearn.image import load_img\n",
+    "\n",
+    "anatomical_img = load_img(glob.glob(\"*anatomical.nii.gz\"))\n",
+    "functional_img = load_img(glob.glob(\"*metaanalytic_coactivation_0_0_0_association-test_z_FDR_0.01.nii.gz\"))\n",
+    "\n",
+    "#That way, there would be no need for hard-codying the directory."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Brain Map Visualisation\n",
-    "The below function visualisez the anatomical brain data and overlays anatomical data to show activation. Cumstomization supports understandability of the visualized data (title, colorbar, colormap). Additionally, exclusion of low values allows for focussing on relevantly high activation while specifying coordinates allows for visualization of targeted sections of the brain. "
+    "### Brain Map Visualization\n",
+    "The below function visualizes the anatomical brain data and overlays anatomical data to show activation. Cumstomization supports understandability of the visualized data (title, colorbar, colormap). Additionally, exclusion of low values allows for focussing on relevantly high activation while specifying coordinates allows for visualization of targeted sections of the brain. "
    ]
   },
   {
@@ -150,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +191,7 @@
     "# Plotting histogram\n",
     "plt.hist(positive_values, bins=50, color=\"skyblue\", edgecolor=\"black\")\n",
     "plt.title(\"Histogram of Functional Data Values\")\n",
-    "plt.xlabel(\"Value\")\n",
+    "plt.xlabel(\"Voxel Intensity Values\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "plt.grid(True)\n",
     "plt.show()"
