--- a/JupiterNotebook_FabianSchuh_HomeAssignment_ProgrammingForPsychologists.ipynb
+++ b/JupiterNotebook_FabianSchuh_HomeAssignment_ProgrammingForPsychologists.ipynb
@@ -94,8 +94,14 @@
     "print(\"Anatomical file:\", anatomical_file)\n",
     "print(\"Functional file:\", functional_file)\n",
     "\n",
+    "#migt be wise to try error handling such as: \n",
+    "# if anatomical_file is None:\n",
+    "#raise FileNotFoundError(\"Anatomical file not found in directory!\")\n",
+    "#if functional_file is None:\n",
+    "#raise FileNotFoundError(\"Functional (coactivation) file not found in directory!\")\n",
+    "\n",
     "# Loading located files\n",
-    "anatomical_img = nib.load(os.path.join(data_dir, anatomical_file))\n",
+    "anatomical_img = nib.load(os.path.join(data_dir, anatomical_file)) #nilearn image load might be better suited: anatomical_img = load_img(os.path.join(data_dir, anatomical_file))\n",
     "functional_img = nib.load(os.path.join(data_dir, functional_file))"
    ]
   },
@@ -123,7 +129,11 @@
     "    cmap=\"inferno\",                                                                     # Colormap\n",
     "    cut_coords=(6, -2, 0)                                                               # Brain coordinates\n",
     ")\n",
-    "plotting.show()"
+    "plotting.show()\n",
+    "\n",
+    "#consider finding the optimal cut coordinates from the functional image: \n",
+    "#cut_coords = find_xyz_cut_coords(functional_img)\n",
+    "#cut_coords=cut_coords,"
    ]
   },
   {
@@ -178,6 +188,15 @@
     "plt.ylabel(\"Frequency\")\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#showing the histogram 2 times is not needed, instead maybe try explaining the results?"
    ]
   },
   {
